infra/envoy-config.yaml
# admin web panel
admin:
  access_log_path: /var/log/admin_logs
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: lb/reverse-proxy # this is just a prefix for any stats logging.
              upgrade_configs:
                - upgrade_type: websocket
              request_timeout: 300s
              http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /var/log/access_logs
              route_config:
                name: all
                virtual_hosts:
                  - name: personalwebsite
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/api"
                        route:
                          cluster: apis
                      - match:
                          prefix: "/"
                        route:
                          cluster: ui

  clusters:
    - name: ui
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: ui
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 5173
    - name: apis
      connect_timeout: 1s
      type: STRICT_DNS 
      load_assignment:
        cluster_name: apis
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8080
